[package]
name = "zrtstr"
version = "0.2.0"
authors = ["Kirill I. <elephanttalk@protonmail.com>"]

exclude = [
	".travis.yml",
	"appveyor.yml",
]

[dependencies]
hound = ">=2.0"
pbr = ">=1.1.1"

[dependencies.clap]
version = ">=3.0.0"
features = ["cargo"]
default-features = true

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = "symbols"
